# pathfinder

./: .gitignore  README.md  pyproject.toml
docs/: branchable-preprocessing.md  cross-subject-discovery.md  event-centered-analysis.md  multi-backbone-orchestration.md  pattern-package-spec.md  production-workflow.md
docs/artifact-contracts/: candidate-patterns.md  epochs.md  packages.md  recordings.md
src/deepspeed/: __init__.py  comm.py
src/pathfinder/: __init__.py  analysis_models.py  artifact_contracts.py  backbone_discovery.py  cli.py  discovery.py  discovery_models.py  eeg_registry.py  epochs.py  ingest.py  models.py  package.py  preprocess.py  reliability.py  run_tracking.py  runtime.py  validation.py
tests/: test_backbone_discovery.py  test_discovery.py  test_eeg_registry.py  test_package.py  test_phase1_pipeline.py  test_phase3_hardening.py
