[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pathfinder"
version = "0.1.0"
description = "Artifact-oriented EEG pattern discovery scaffolding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pathfinder = "pathfinder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
